# DocuMind

./: .env.example  .env.lol  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml
docker/: .env.example  Dockerfile  README.md  docker-compose.yml
docs/: api-reference.md  architecture.md  deployment.md  performance-tuning.md
examples/: basic_usage.py
scripts/: check_services.py  clear_and_reindex.py  debug_retrieval.py  test_source_id_chunks.py  test_url_extraction.py  try_clean_indexing.py
src/: .env.example  __init__.py  main.py  requirements.txt  test_groq_vision.py  test_groq_vision_v2.py  test_groq_vision_v3.py  test_groq_vision_v4.py  test_groq_vision_v5.py
src/config/: __init__.py  redis.py  settings.py
src/controllers/: __init__.py  base_controller.py  chat_controller.py  extraction_controller.py  parser_controller.py  project_controller.py
src/core/: config.py  logging_config.py
src/extractors/: __init__.py  base_extractor.py  excel_extractor.py  image_extractor.py  image_helpers.py  media_extractor.py  pdf_extractor.py  ppt_extractor.py  url_extractor.py  word_extractor.py  youtube_extractor.py
src/models/: __init__.py  asset.py
src/pipeline/: __init__.py  document_pipeline.py
src/routes/: __init__.py  chat.py  delete.py  extraction.py  health.py
src/schemas/: __init__.py  chat.py  extraction.py
streamlit_app/: api_service.py  app.py  components.py  config.py  requirements.txt
tests/: __init__.py  conftest.py
(+26 files in other folders)
